--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,5 +8,5 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh; /* Definir a altura como 100% da altura da viewport */
+    height: 90vh; 
   }
